# AML-project

./: .gitignore  LICENSE  README.md  model_gated.py  model_weights  pyproject.toml
config/: __init__.py
data/: hist.json  loss_history.json  model_weights  plot.py
report/: asmejour.cls  main.tex  references.bib
src/aml_project/: __init__.py  dataset.py  eval_places2.py  model.py  places2_dataset.py  preprocess.py  save.py  show_result.py  test_on_img.py  view.py
